--- a/Server/package.json
+++ b/Server/package.json
@@ -4,16 +4,23 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"server.js"
+    "start": "server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.1.4",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.1.5",
+    "react-router-dom": "^7.12.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.11"
   }
 }
