--- a/Server/.env
+++ b/Server/.env
@@ -1,3 +1,3 @@
-PORT=5000
+PORT=5006
 JWT_SECRET=OnlineBookStore
-MONGO_DB_URI=mongodb://localhost:27017/
+MONGO_DB_URI=mongodb+srv://admin:admin@bookstore.xevolrp.mongodb.net/online-bookstore?retryWrites=true&w=majority&appName=BookStore
